# todo-cli-python

./: .gitignore  README.md  manual-test-commands.md  pyproject.toml
.specify/intelligence/: add-task.md
.specify/memory/: constitution.md
history/adr/: ADR-005-update-operation-strategy.md  ADR-006-display-format-strategy.md
history/prompts/001-add-task/: 002-add-task-specification.spec.prompt.md  003-add-task-clarification.misc.prompt.md  004-add-task-implementation-plan.plan.prompt.md  005-add-task-task-breakdown.tasks.prompt.md  005-implement-phase-1-setup.green.prompt.md  006-implement-phase-2-foundational.green.prompt.md  007-implement-phase-3-user-story-1.green.prompt.md  008-implement-phase-4-user-story-2.green.prompt.md  (+1 more)
specs/001-add-task/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-update-task/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-delete-task/: plan.md  spec.md  tasks.md
specs/003-view-tasks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-todo-toggle-status/: data-model.md  plan.md  research.md  spec.md  tasks.md
src/: __init__.py  cli.py  main.py  models.py  storage.py  validators.py
tests/integration/: test_add_command.py  test_complete_command.py  test_delete_command.py  test_list_command.py  test_update_command.py
tests/unit/: test_storage.py  test_storage_delete.py  test_storage_list.py  test_storage_toggle.py  test_storage_update.py  test_task_id_validation.py  test_task_model.py  test_validators.py
(+40 files in other folders)
